I now master Jesse

--- a/prospectus.tex
+++ b/prospectus.tex
@@ -25,7 +25,7 @@
 \large
 by\\[.25 in]
 % Change your name here
-Jesse S. Wynn\\[1in]
+Master Jesse S. Wynn\\[1in]
 
 A prospectus submitted to the faculty of\\
 Department of Mechanical Engineering\\
