--- a/prospectus.tex
+++ b/prospectus.tex
@@ -217,7 +217,9 @@ Though much of this proposed research will begin in simulation, the resultant me
 
 \section{Anticipated Contributions}
 
-As a result of this research, there will be an improved understanding of how robust maritime landing can be achieved in real-world applications and conditions.  It is anticipated that this research will demonstrate ----STOPPED HERE-----A direct comparison will be made between steady and unsteady flow through an axial turbine without any bypass flow. This direct comparison has not been previously performed. Possible publications from this research include presenting at the ASME Turbo Expo, submitting to the ASME Journal of Turbomachinery, presenting at the AIAA Aerospace Science Meeting, or other conferences and journals. This research is sponsored by Innovative Scientific Solutions, Inc. through an Air Force contract.
+As a result of this research, there will be an improved understanding of how robust maritime landing can be achieved for real-world applications and conditions.  Specifically, it is anticipated that this work will demonstrate the contributions that an IR vision system and shipboard IMU can make in helping to ensure a soft and safe landing. Although there are many shipboard landing methods that have already been developed, this proposed research seeks to extend and add to current methods to a degree that is new and unique.  Maritime landing in darkness, and landing with ship deck IMU data, are both areas that appear to be absent in the current literature. Good results coming out of this research would open opportunities for possible journal or conference paper publications, and would also pave the way to further research opportunities for future students.    
+
+%  A direct comparison will be made between a steady and unsteady flow through an axial turbine without any bypass flow. This direct comparison has not been previously performed. Possible publications from this research include presenting at the ASME Turbo Expo, submitting to the ASME Journal of Turbomachinery, presenting at the AIAA Aerospace Science Meeting, or other conferences and journals. This research is sponsored by Innovative Scientific Solutions, Inc. through an Air Force contract.
 
 \pagebreak
 
